--- a/pythonTest/CJAP3.ipynb
+++ b/pythonTest/CJAP3.ipynb
@@ -189,15 +189,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-11-ad25a7d95c88>, line 9)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-ad25a7d95c88>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    average = total / 1en(A)\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "790\n",
+      "79.0\n"
      ]
     }
    ],
@@ -210,7 +210,7 @@
     "    \n",
     "print(total)\n",
     "\n",
-    "average = total / 1en(A)\n",
+    "average = total / len(A)\n",
     "print(average)"
    ]
   },
@@ -233,39 +233,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "나무를 1번 찍었습니다.\n",
-      "나무를 2번 찍었습니다.\n",
-      "나무를 3번 찍었습니다.\n",
-      "나무를 4번 찍었습니다.\n",
-      "나무를 5번 찍었습니다.\n",
-      "나무를 6번 찍었습니다.\n",
-      "나무를 7번 찍었습니다.\n",
-      "나무를 8번 찍었습니다.\n",
-      "나무를 9번 찍었습니다.\n",
-      "나무를 10번 찍었습니다.\n",
-      "나무가 넘어갑니다\n"
+      "[2, 6, 10]\n"
      ]
     }
    ],
+   "source": [
+    "numbers = [1, 2, 3, 4, 5]\n",
+    "result = [n *2 for n in numbers if n%2==1 ]\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
