--- a/pythonTest/CJAP3.ipynb
+++ b/pythonTest/CJAP3.ipynb
@@ -262,10 +262,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jangpro 150\n",
+      "jangpro 151\n",
+      "jangpro 152\n",
+      "jangpro 153\n",
+      "jangpro 154\n",
+      "jangpro 155\n",
+      "jangpro 156\n",
+      "jangpro 157\n",
+      "jangpro 158\n",
+      "jangpro 159\n",
+      "jangpro 160\n",
+      "jangpro 161\n",
+      "jangpro 162\n",
+      "jangpro 163\n",
+      "jangpro 164\n",
+      "jangpro 165\n",
+      "jangpro 166\n",
+      "jangpro 167\n",
+      "jangpro 168\n",
+      "jangpro 169\n",
+      "jangpro 170\n",
+      "jangpro 171\n",
+      "jangpro 172\n",
+      "jangpro 173\n",
+      "jangpro 174\n",
+      "jangpro 175\n",
+      "jangpro 176\n",
+      "jangpro 177\n",
+      "jangpro 178\n",
+      "jangpro 179\n",
+      "jangpro 180\n",
+      "jangpro 181\n",
+      "jangpro 182\n",
+      "jangpro 183\n",
+      "jangpro 184\n",
+      "jangpro 185\n",
+      "jangpro 186\n",
+      "jangpro 187\n",
+      "jangpro 188\n",
+      "jangpro 189\n",
+      "jangpro 190\n",
+      "jangpro 191\n",
+      "jangpro 192\n",
+      "jangpro 193\n",
+      "jangpro 194\n",
+      "jangpro 195\n",
+      "jangpro 196\n",
+      "jangpro 197\n",
+      "jangpro 198\n",
+      "jangpro 199\n",
+      "jangpro 200\n",
+      "jangpro 201\n",
+      "jangpro 202\n",
+      "jangpro 203\n",
+      "jangpro 204\n",
+      "jangpro 205\n",
+      "jangpro 206\n",
+      "jangpro 207\n",
+      "jangpro 208\n",
+      "jangpro 209\n",
+      "jangpro 210\n",
+      "jangpro 211\n",
+      "jangpro 212\n",
+      "jangpro 213\n",
+      "jangpro 214\n",
+      "jangpro 215\n",
+      "jangpro 216\n",
+      "jangpro 217\n",
+      "jangpro 218\n",
+      "jangpro 219\n",
+      "jangpro 220\n",
+      "jangpro 221\n",
+      "jangpro 222\n",
+      "jangpro 223\n",
+      "jangpro 224\n",
+      "jangpro 225\n",
+      "jangpro 226\n",
+      "jangpro 227\n",
+      "jangpro 228\n",
+      "jangpro 229\n",
+      "jangpro 230\n",
+      "jangpro 231\n",
+      "jangpro 232\n",
+      "jangpro 233\n",
+      "jangpro 234\n",
+      "jangpro 235\n",
+      "jangpro 236\n",
+      "jangpro 237\n",
+      "jangpro 238\n",
+      "jangpro 239\n",
+      "jangpro 240\n",
+      "jangpro 241\n",
+      "jangpro 242\n",
+      "jangpro 243\n",
+      "jangpro 244\n",
+      "jangpro 245\n",
+      "jangpro 246\n",
+      "jangpro 247\n",
+      "jangpro 248\n",
+      "jangpro 249\n",
+      "jangpro 250\n",
+      "jangpro 251\n",
+      "jangpro 252\n",
+      "jangpro 253\n",
+      "jangpro 254\n",
+      "jangpro 255\n",
+      "jangpro 256\n",
+      "jangpro 257\n",
+      "jangpro 258\n",
+      "jangpro 259\n",
+      "jangpro 260\n",
+      "jangpro 261\n",
+      "jangpro 262\n",
+      "jangpro 263\n",
+      "jangpro 264\n",
+      "jangpro 265\n",
+      "jangpro 266\n",
+      "jangpro 267\n",
+      "jangpro 268\n",
+      "jangpro 269\n",
+      "jangpro 270\n",
+      "jangpro 271\n",
+      "jangpro 272\n",
+      "jangpro 273\n",
+      "jangpro 274\n",
+      "jangpro 275\n",
+      "jangpro 276\n",
+      "jangpro 277\n",
+      "jangpro 278\n",
+      "jangpro 279\n",
+      "jangpro 280\n",
+      "jangpro 281\n",
+      "jangpro 282\n",
+      "jangpro 283\n",
+      "jangpro 284\n",
+      "jangpro 285\n",
+      "jangpro 286\n",
+      "jangpro 287\n",
+      "jangpro 288\n",
+      "jangpro 289\n",
+      "jangpro 290\n",
+      "jangpro 291\n",
+      "jangpro 292\n",
+      "jangpro 293\n",
+      "jangpro 294\n",
+      "jangpro 295\n",
+      "jangpro 296\n",
+      "jangpro 297\n",
+      "jangpro 298\n",
+      "jangpro 299\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"jangpro\"\n",
+    "for i in range(150, 300):\n",
+    "        print(name,i)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -274,10 +435,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jangpro 150\n",
+      "jangpro 151\n",
+      "jangpro 152\n",
+      "jangpro 153\n",
+      "jangpro 154\n",
+      "jangpro 155\n",
+      "jangpro 156\n",
+      "jangpro 157\n",
+      "jangpro 158\n",
+      "jangpro 159\n",
+      "jangpro 160\n",
+      "jangpro 161\n",
+      "jangpro 162\n",
+      "jangpro 163\n",
+      "jangpro 164\n",
+      "jangpro 165\n",
+      "jangpro 166\n",
+      "jangpro 167\n",
+      "jangpro 168\n",
+      "jangpro 169\n",
+      "jangpro 170\n",
+      "jangpro 171\n",
+      "jangpro 172\n",
+      "jangpro 173\n",
+      "jangpro 174\n",
+      "jangpro 175\n",
+      "jangpro 176\n",
+      "jangpro 177\n",
+      "jangpro 178\n",
+      "jangpro 179\n",
+      "jangpro 180\n",
+      "jangpro 181\n",
+      "jangpro 182\n",
+      "jangpro 183\n",
+      "jangpro 184\n",
+      "jangpro 185\n",
+      "jangpro 186\n",
+      "jangpro 187\n",
+      "jangpro 188\n",
+      "jangpro 189\n",
+      "jangpro 190\n",
+      "jangpro 191\n",
+      "jangpro 192\n",
+      "jangpro 193\n",
+      "jangpro 194\n",
+      "jangpro 195\n",
+      "jangpro 196\n",
+      "jangpro 197\n",
+      "jangpro 198\n",
+      "jangpro 199\n",
+      "jangpro 200\n",
+      "jangpro 201\n",
+      "jangpro 202\n",
+      "jangpro 203\n",
+      "jangpro 204\n",
+      "jangpro 205\n",
+      "jangpro 206\n",
+      "jangpro 207\n",
+      "jangpro 208\n",
+      "jangpro 209\n",
+      "jangpro 210\n",
+      "jangpro 211\n",
+      "jangpro 212\n",
+      "jangpro 213\n",
+      "jangpro 214\n",
+      "jangpro 215\n",
+      "jangpro 216\n",
+      "jangpro 217\n",
+      "jangpro 218\n",
+      "jangpro 219\n",
+      "jangpro 220\n",
+      "jangpro 221\n",
+      "jangpro 222\n",
+      "jangpro 223\n",
+      "jangpro 224\n",
+      "jangpro 225\n",
+      "jangpro 226\n",
+      "jangpro 227\n",
+      "jangpro 228\n",
+      "jangpro 229\n",
+      "jangpro 230\n",
+      "jangpro 231\n",
+      "jangpro 232\n",
+      "jangpro 233\n",
+      "jangpro 234\n",
+      "jangpro 235\n",
+      "jangpro 236\n",
+      "jangpro 237\n",
+      "jangpro 238\n",
+      "jangpro 239\n",
+      "jangpro 240\n",
+      "jangpro 241\n",
+      "jangpro 242\n",
+      "jangpro 243\n",
+      "jangpro 244\n",
+      "jangpro 245\n",
+      "jangpro 246\n",
+      "jangpro 247\n",
+      "jangpro 248\n",
+      "jangpro 249\n",
+      "jangpro 250\n",
+      "jangpro 251\n",
+      "jangpro 252\n",
+      "jangpro 253\n",
+      "jangpro 254\n",
+      "jangpro 255\n",
+      "jangpro 256\n",
+      "jangpro 257\n",
+      "jangpro 258\n",
+      "jangpro 259\n",
+      "jangpro 260\n",
+      "jangpro 261\n",
+      "jangpro 262\n",
+      "jangpro 263\n",
+      "jangpro 264\n",
+      "jangpro 265\n",
+      "jangpro 266\n",
+      "jangpro 267\n",
+      "jangpro 268\n",
+      "jangpro 269\n",
+      "jangpro 270\n",
+      "jangpro 271\n",
+      "jangpro 272\n",
+      "jangpro 273\n",
+      "jangpro 274\n",
+      "jangpro 275\n",
+      "jangpro 276\n",
+      "jangpro 277\n",
+      "jangpro 278\n",
+      "jangpro 279\n",
+      "jangpro 280\n",
+      "jangpro 281\n",
+      "jangpro 282\n",
+      "jangpro 283\n",
+      "jangpro 284\n",
+      "jangpro 285\n",
+      "jangpro 286\n",
+      "jangpro 287\n",
+      "jangpro 288\n",
+      "jangpro 289\n",
+      "jangpro 290\n",
+      "jangpro 291\n",
+      "jangpro 292\n",
+      "jangpro 293\n",
+      "jangpro 294\n",
+      "jangpro 295\n",
+      "jangpro 296\n",
+      "jangpro 297\n",
+      "jangpro 298\n",
+      "jangpro 299\n",
+      "jangpro 300\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(150, 301):\n",
+    "        print(\"jangpro\",i)"
+   ]
   },
   {
    "cell_type": "markdown",
